img alignment fix

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1564,7 +1564,6 @@ input#pan {
   width: 50%;
 }
   .childblockiframe-element-img{ 
-    width: 100%;
     margin-bottom: 30%;
   }
 
